--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,17 +7,11 @@ name = "scanstash"
 version = "0.1.0"
 requires-python = "==3.11.*"
 
-dependencies = [
-    "fastapi",
-    "uvicorn",
-    "psycopg2-binary==2.9.9",
-]
+dependencies = ["fastapi", "uvicorn", "psycopg2-binary==2.9.9"]
 
 [project.optional-dependencies]
-style = [
-    "mypy",
-    "ruff",
-]
+style = ["mypy", "ruff"]
+
 
 [project.scripts]
 run = "scanstash.__main__:main"
