--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.1.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "angularx-qrcode": "^17.0.0",
+    "qr-scanner": "^1.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
